Switch to Java 11 (for Ververica Cloud compatibility)